[tool.poetry]
name = "my_httprunner"
version = "0.1.0"
description = ""
authors = ["pan"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
pyyaml = "^5.3.1"
jsonpath = "^0.82"

[tool.poetry.dev-dependencies]
coverage = "^5.0.4"
coveralls = "^1.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
